# context-eval

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.codex/: config.example.toml  config.toml
context_eval/: __init__.py  __main__.py  cli.py  compare.py  config.py  config_editor.py  dry_run.py  export.py  hashing.py  init.py  inspect_run.py  launcher.py  local_app.py  logging.py  models.py  prompt.py  reporting.py  runner.py  ui.py  workspace.py
docs/: _config.yml  adapter-api.md  agent-profiles.md  agent-telemetry.md  architecture.md  artifact-model.md  coco-visual-hybrid-evaluation.md  concepts.md  config-diagnostics.md  configuration.md  demo-workflow.md  designer-usability.md  development-plan.md  evaluation-methodology.md  evaluation.md  faq.md  frontend-workflow.md  index.md  local-app-harness-readiness.md  local-app-workflow.md  local-e2e-ci.md  local-ui-config-editor.md  multi-agent-comparison.md  pages-setup.md  release-candidate-install-smoke.md  release-checklist.md  skill-hub-import.md  task-format.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
openspec/: config.yaml
scripts/: build-windows-portable.py  check-release-state.py  inspect-package-artifacts.py  install-smoke-artifacts.py  prepare-release.py  validate-frontend.py  validate-skills.ps1
tests/: test_adapters.py  test_agent_profiles_and_local_app_specs.py  test_agent_telemetry_spec.py  test_cli.py  test_coco_visual_hybrid_evaluation_spec.py  test_config.py  test_config_diagnostics_spec.py  test_config_editor.py  test_development_plan_reconciliation.py  test_diff_stats.py  test_examples.py  test_execution_control_spec.py  test_export.py  test_frontend_tooling_foundation.py  test_local_app_launcher.py  test_local_app_server.py  test_local_e2e_ci_spec.py  test_local_e2e_smoke.py  test_local_ui_spec.py  test_models.py  test_multi_agent_comparison_spec.py  test_package_artifact_inspection.py  test_prepare_release.py  test_project_documentation_site.py  test_project_readiness.py  (+9 more)
(+89 files in other folders)
